# Bme280SpiTest

./: CMakeLists.txt  LICENSE  README.md
include/: Bme280Spi.hpp  SpiDevice.hpp
src/: Bme280Spi.cpp  SpiDevice.cpp  main.cpp
sysapi/: CMakeLists.txt
sysapi/include/sysapi/: fcntl.hpp  unistd.hpp
sysapi/include/sysapi/sys/: ioctl.hpp
sysapi/src/: detail.cpp  fcntl.cpp  unistd.cpp
sysapi/src/include/: detail.hpp
sysapi/src/sys/: ioctl.cpp
